<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        tools:context=".ProjectsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OSGeo Initiatives"
            android:textSize="35sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/geo_for_all"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/white"
                    android:text="GeoForAll"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/geo_for_all"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/foss4g"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="FOSS4G (Events)"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/foss4g"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/foss4g_travel_grants"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="FOSS4G Travel Grants"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/foss4g_travel_grants"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/open_geoscience"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Open GeoScience"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/open_geoscience"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/un_initiative"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="UN Initiative"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/un_initiatives"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/gsoc"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="GSoC"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/gsoc"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/osgeolive"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="OSGeoLive"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/osgeolive"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/meta_crs"
                android:layout_weight="1"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Meta CRS Initiative"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/backLight"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/background"
                    android:text="@string/meta_crs"
                    />
                <TextView
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/backLight"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="Click to know more"/>
            </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</ScrollView>

